--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -11,6 +11,8 @@ $nav-dark:#353a46;
 $background-grey:#f3f3f3;
 $layout-border-color:#ddd;
 $blue:#5fa9da;
+$orange:#eb9541;
+$alert-orange:#ff921e;
 
 $nav-height:70px;
 //////////////////////////////////////// 通用函数
