--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -84,7 +84,7 @@
       </ul>
       <!------------------------------------------------   创建讨论版的按钮  -------------------------------------->
       <% if @setting == 'analyse' %>
-          <a class="btn btn-warning linear compare-current-btn" id="create-discuss-btn">创建讨论</a>
+          <a class="btn btn-warning linear compare-current-btn" id="create-discuss-btn">Create Insight</a>
       <% end %>
 
     </div>
