--- a/app/views/kpi_subscribes/new.html.erb
+++ b/app/views/kpi_subscribes/new.html.erb
@@ -42,7 +42,7 @@
     <p>Alert method</p>
     <select style="height: 30px; width:423px; margin: 5px" id="calculate-type" class="chosen-select">
       <option value="0">SMS</option>
-      <option value="1">E-mail/option>
+      <option value="1">E-mail</option>
     </select>
 
 
