--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,10 @@
                             if (v.count != 0) {
                                 $('#user-message-ul').append(
                                         $("<li/>").append(
-                                                $("<a/>").attr('href', v.link).append($("<span/>").text(v.content))
-                                                        .append($("<span/>").text(v.count))
+                                                $("<a/>").attr('href', v.link)
+                                                        .append($("<span/>").text(v.content))
+                                                        .append($("<span/>")
+                                                                .append($("<label />").text(v.count)))
                                         )
                                 );
                             }
