--- a/app/assets/stylesheets/story_sets.css.scss
+++ b/app/assets/stylesheets/story_sets.css.scss
@@ -30,35 +30,55 @@
       }
       .title{
         background:#fff;
-        height:135px;
+        height:100px;
         padding-top:20px;
         $font-color:#9d9d9d;
-        a:first-of-type{
-          display:block;
-          $width:35px;
-          width:$width;
-          height:$width;
-          @include border-radius-same($width);
-          border:1px solid $layout-border-color;
-          text-align:center;
-          line-height:$width;
-          color:$font-color;
-          margin:0px auto 0;
-        }
+        //a:first-of-type{
+        //  display:block;
+        //  $width:35px;
+        //  width:$width;
+        //  height:$width;
+        //  @include border-radius-same($width);
+        //  border:1px solid $layout-border-color;
+        //  text-align:center;
+        //  line-height:$width;
+        //  color:$font-color;
+        //  margin:0px auto 0;
+        //}
         p:first-of-type{
           text-align:center;
           color:$font-color;
           font-size:23px;
+          a{
+              display:inline-block;
+              $width:25px;
+              width:$width;
+              height:$width;
+              @include border-radius-same($width);
+              border:1px solid $layout-border-color;
+              text-align:center;
+              line-height:$width;
+              color:$font-color;
+              margin:0px auto 0;
+              font-size:13px;
+            position:relative;
+            top:-4px;
+            i{
+              position:relative;
+              top:1px;
+              left:1px;
+            }
+          }
         }
         a.btn{
-          margin:15px auto 0;
+          margin:5px auto 0;
           width:210px;
         }
       }
       .projects{
-        height:calc(100% - 195px);
-        height:-moz-calc(100% - 195px);
-        height:-webkit-calc(100% - 195px);
+        height:calc(100% - 155px);
+        height:-moz-calc(100% - 155px);
+        height:-webkit-calc(100% - 155px);
         background:#fff;
         position:absolute;
         bottom:0px;
@@ -100,15 +120,18 @@
             padding-left:20px;
             height:100%;
             p{
+              cursor: pointer;
               word-wrap: break-word;
             }
             p:first-of-type{
+              cursor:pointer;
               margin-top:38px;
               font-size:24px;
               margin-bottom:5px;
               line-height:24px;
             }
             p:last-of-type{
+              cursor:pointer;
               font-size:12px;
               color:#9d9d9d;
               margin:0px;
@@ -149,22 +172,36 @@
       .item{
         display:table;
         width:100%;
-        padding:7px 0px 7px 3px;
+        padding:10px 0px ;
         background:#fff;
         border-bottom:1px dashed rgba(0,0,0,0.2);
         &>p{
-          font-size:13px;
+          font-size:12px;
           display:table-cell;
+          padding:0px 5px;
+          width:calc(100% - 120px);
+          width:-moz-calc(100% - 120px);
+          width:-webkit-calc(100% - 120px);
+          @include word-break;
           &:first-of-type{
             vertical-align:middle;
-            color:#16ca9e;
+            color:#666;
+            a{
+              display:block;
+              &:first-of-type{
+                color:#222;
+              }
+              .mark{
+                color:$blue;
+              }
+            }
           }
           &:last-of-type{
-            width:80px;
+            width:120px;
             text-align: right;
             padding-right:5px;
             font-size:11px;
-            color:#777;
+            color:#999;
             vertical-align:bottom;
           }
         }
@@ -419,7 +456,8 @@
         width:130px;
         .btn{
           font-size:12px;
-          padding:6px 10px;
+          padding:6px 2px;
+          margin:0px 5px;
         }
       }
     }
