--- a/app/views/kpi_subscribes/_subscribes.html.erb
+++ b/app/views/kpi_subscribes/_subscribes.html.erb
@@ -17,6 +17,16 @@
                 </div>
               </td>
               <td>
+                <ul>
+                  <% if ks.alert_by_sms %>
+                      <li>SMS</li>
+                  <%end%>
+                  <% if ks.alert_by_email %>
+                      <li>EMAIL</li>
+                  <%end%>
+                </ul>
+              </td>
+              <td>
                 <% if ks.is_alert %>
                     <a class="btn btn-danger"><%= t 'subscription.add-sub.alert' %></a>
                 <% end %>
@@ -27,6 +37,7 @@
               <td><%= t 'subscription.add-sub.department' %></td>
               <td><%= t 'subscription.add-sub.time' %></td>
               <td><%= t 'subscription.add-sub.alert_type' %></td>
+              <td></td>
               <td></td>
             </tr>
           </table>
