--- a/app/views/kpi_subscribes/new.html.erb
+++ b/app/views/kpi_subscribes/new.html.erb
@@ -44,9 +44,15 @@
       <option value="0">SMS</option>
       <option value="1">E-mail/option>
     </select>-->
-    <div class="extreme">
-      <input type="checkbox" value="SMS" name="SMS" id="alert-sms"/>
-      <input type="checkbox" value="EMAIL" id="alert-email"/>
+    <div class="checkbox-group">
+      <div class="checkbox-item">
+        <input type="checkbox" value="SMS" name="SMS" id="alert-sms"/>
+        <label>SMS</label>
+      </div>
+      <div class="checkbox-item">
+        <input type="checkbox" value="EMAIL" id="alert-email"/>
+        <label>E-mail</label>
+      </div>
     </div>
 
 
