--- a/app/assets/stylesheets/Log.css
+++ b/app/assets/stylesheets/Log.css
@@ -75,7 +75,8 @@
 }
 .login-operate{
     /*width:223px;*/
-    width:332px;
+    /*width:332px;*/
+    width:210px;
     margin:30px auto 0px;
 }
 .login-operate a{
