--- a/app/views/kpi_subscribes/_subscribes.html.erb
+++ b/app/views/kpi_subscribes/_subscribes.html.erb
@@ -35,7 +35,7 @@
               <td><%= t 'subscription.add-sub.department' %></td>
               <td><%= t 'subscription.add-sub.time' %></td>
               <td><%= t 'subscription.add-sub.alert_type' %></td>
-              <td>Alert By</td>
+              <td><%= t 'subscription.add-sub.alert_by' %></td>
               <td></td>
             </tr>
           </table>
