--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="dashboard-content-full" id="dashboard-content-full" dashboard-name="<%= @dashboard.name%>" dashboard-id="<%= @dashboard.id%>">
+<div class="dashboard-content-full" id="dashboard-content-full">
   <div id="full-size-title" class="full-size-title">
     <p class="full-size-label"></p>
     <!--
@@ -14,6 +14,12 @@
   </div>
   <div id="dash-fullsize" class="gridster black">
     <ul class="dashBoard-show" id="dashBoard-show-full">
+      <li data-col="1" data-row="1" data-sizex="4" data-sizey="1" class="gs-w" style="display: list-item;">
+        <div id="example-one" class="example-container"></div>
+      </li>
+      <li data-col="1" data-row="2" data-sizex="4" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
+      <li data-col="1" data-row="3" data-sizex="4" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
+      <li data-col="1" data-row="4" data-sizex="4" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
     </ul>
   </div>
 </div>
@@ -41,6 +47,7 @@
     <%= javascript_include_tag "Dashboard-add.js"%>
     <%= javascript_include_tag "Dashboard-init.js"%>
     <%= javascript_include_tag "dashboard_type_special.js"%>
+    <%= javascript_include_tag "DashboardExampleChart" %>
 <%end%>
 
 <script type="text/javascript">
@@ -56,14 +63,48 @@
   }
 
   $(document).ready(function (){
+      var KPIArray=[ "E1-Total","Attendance","E1-Normal","Output"],
+              i,
+              departmentArray=["MB","GM","Local","C-RBA"],
+              $targets=$("#dashBoard-show-full").find(".example-container");
+      for(i=0;i<KPIArray.length;i++){
+          (function(i){
+              $.get("/dashboard_items/fake_data",
+                      {kpi:KPIArray[i],department:departmentArray},
+                      function(data){
+                          var height=function(i){
+                              if($targets.eq(i).parents(".gs-w").height()===0){
+                                  return height(++i);
+                              }
+                              else{
+                                  return $targets.eq(i).parents(".gs-w").height();
+                              }
+                          }
+                          var option={
+                              height:height(i),
+                              target:$targets.eq(i).attr("id"),
+                              kpi:data.title,
+                              date:data.time,
+                              departmentArray:departmentArray,
+                              currentArray:data.value,
+                              targetArray:data.target
+                          };
+                          var one=new DashBoardExampleChart(option);
+                          one.init();
+                      }
+              )
+          })(i);
+
+      }
       init_component();
+      fullsize();
       //DASHBOARD.init();
       right_nav_main.init();
       $("#dashboard-content-full").css("display","block");
       DASHBOARD.add.init();
-      current_dashboard_id = $("#dashboard-content-full").attr("dashboard-id");
-      select_dashboard(current_dashboard_id,fullsize);
-      current_dashboard_name = $("#dashboard-content-full").attr("dashboard-name");
+      //current_dashboard_id = $("#dashboard-content-full").attr("dashboard-id");
+      //select_dashboard(current_dashboard_id,fullsize);
+      //current_dashboard_name = $("#dashboard-content-full").attr("dashboard-name");
 
   });
 </script>
