--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -14,12 +14,21 @@
   </div>
   <div id="dash-fullsize" class="gridster black">
     <ul class="dashBoard-show" id="dashBoard-show-full">
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="1"  class="gs-w" style="display: list-item;">
-        <div id="example-one" class="example-container"></div>
-      </li>
+      <!--Daily-->
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="1"  class="gs-w" style="display: list-item;"><div id="example-one" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="2" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="3" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="4" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
+      <!--Weekly-->
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="5"  class="gs-w" style="display: list-item;"><div id="example-one" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="6" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="7" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="8" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
+      <!--Monthly-->
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="9"  class="gs-w" style="display: list-item;"><div id="example-one" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="10" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="11" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="12" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
     </ul>
   </div>
 </div>
@@ -63,15 +72,23 @@
   }
 
   $(document).ready(function (){
-      var KPIArray=[ "E1-Total","Attendance","E1-Normal","Output"],
+      var KPIArray=[ "E1","PPM_L","PPM_L","OEE_L","E1","PPM_L","PPM_L","OEE_L","E1","PPM_L","PPM_L","OEE_L"],
               i,
               departmentArray={
+                  "0":["MB","GM","Local","C-RBA"],
                   "1":["MB","GM","Local","C-RBA"],
                   "2":["MB","GM","Local","C-RBA"],
                   "3":["MB","GM","Local","C-RBA"],
-                  "4":["MB","GM","Local","C-RBA"]
+                  "4":["MB","GM","Local","C-RBA"],
+                  "5":["MB","GM","Local","C-RBA"],
+                  "6":["MB","GM","Local","C-RBA"],
+                  "7":["MB","GM","Local","C-RBA"],
+                  "8":["MB","GM","Local","C-RBA"],
+                  "9":["MB","GM","Local","C-RBA"],
+                  "10":["MB","GM","Local","C-RBA"],
+                  "11":["MB","GM","Local","C-RBA"]
               },
-              intervalArray=[90,100,200,300],
+              intervalArray=[100,100,100,100,200,200,200,200,300,300,300,300],
               $targets=$("#dashBoard-show-full").find(".example-container");
       for(i=0;i<KPIArray.length;i++){
           (function(i){
