--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -217,7 +217,7 @@
 
 <script type="text/javascript">
     $(document).ready(function (){
-        var KPIArray=[ "E1","PPM_L","PPM_L","OEE_L"],
+        var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L"],
                 i,
                 departmentArray={
                     "0":["MB","GM","Local","C-RBA"],
