--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -72,7 +72,7 @@
   }
 
   $(document).ready(function (){
-      var KPIArray=[ "E1","PPM_L","PPM_L","OEE_L","E1","PPM_L","PPM_L","OEE_L","E1","PPM_L","PPM_L","OEE_L"],
+      var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L"],
               i,
               departmentArray={
                   "0":["MB","GM","Local","C-RBA"],
