--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -20,15 +20,15 @@
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="3" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="4" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
       <!--Weekly-->
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="5"  class="gs-w" style="display: list-item;"><div id="example-one" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="6" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="7" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="8" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="5"  class="gs-w" style="display: list-item;"><div id="example-five" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="6" class="gs-w" style="display: list-item;"><div id="example-six" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="7" class="gs-w" style="display: list-item;"><div id="example-seven" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="8" class="gs-w" style="display: list-item;"><div id="example-eight" class="example-container"></div></li>
       <!--Monthly-->
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="9"  class="gs-w" style="display: list-item;"><div id="example-one" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="10" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="11" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="12" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="9"  class="gs-w" style="display: list-item;"><div id="example-nine" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="10" class="gs-w" style="display: list-item;"><div id="example-ten" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="11" class="gs-w" style="display: list-item;"><div id="example-eleven" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="12" class="gs-w" style="display: list-item;"><div id="example-twelve" class="example-container"></div></li>
     </ul>
   </div>
 </div>
