--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -75,18 +75,18 @@
       var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L"],
               i,
               departmentArray={
-                  "0":["MB","GM","Local","C-RBA"],
-                  "1":["MB","GM","Local","C-RBA"],
-                  "2":["MB","GM","Local","C-RBA"],
-                  "3":["MB","GM","Local","C-RBA"],
-                  "4":["MB","GM","Local","C-RBA"],
-                  "5":["MB","GM","Local","C-RBA"],
-                  "6":["MB","GM","Local","C-RBA"],
-                  "7":["MB","GM","Local","C-RBA"],
-                  "8":["MB","GM","Local","C-RBA"],
-                  "9":["MB","GM","Local","C-RBA"],
-                  "10":["MB","GM","Local","C-RBA"],
-                  "11":["MB","GM","Local","C-RBA"]
+                  "0":["MB","GM","Local","Cutting"],
+                  "1":["MB","GM","Local","Cutting"],
+                  "2":["MB","GM","Local","Cutting"],
+                  "3":["MB","GM","Local"],
+                  "4":["MB","GM","Local","Cutting"],
+                  "5":["MB","GM","Local","Cutting"],
+                  "6":["MB","GM","Local","Cutting"],
+                  "7":["MB","GM","Local"],
+                  "8":["MB","GM","Local","Cutting"],
+                  "9":["MB","GM","Local","Cutting"],
+                  "10":["MB","GM","Local","Cutting"],
+                  "11":["MB","GM","Local"]
               },
               intervalArray=[100,100,100,100,200,200,200,200,300,300,300,300],
               $targets=$("#dashBoard-show-full").find(".example-container");
