--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -220,10 +220,10 @@
         var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L"],
                 i,
                 departmentArray={
-                    "0":["MB","GM","Local","C-RBA"],
-                    "1":["MB","GM","Local","C-RBA"],
-                    "2":["MB","GM","Local","C-RBA"],
-                    "3":["MB","GM","Local","C-RBA"]
+                    "0":["MB","GM","Local","Cutting"],
+                    "1":["MB","GM","Local","Cutting"],
+                    "2":["MB","GM","Local","Cutting"],
+                    "3":["MB","GM","Local"]
                 },
                 intervalArray=[100,100,100,100],
                 $targets=$("#dashBoard-show-full").find(".example-container");
