--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -71,6 +71,7 @@
       //console.log("fullsize");
   }
 
+  //can use destroy
   $(document).ready(function (){
       var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L"],
               i,
