--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -222,7 +222,7 @@
                 departmentArray={
                     "0":["MB","GM","Local","Cutting"],
                     "1":["MB","GM","Local","Cutting"],
-                    "2":["MB","GM","Local","Cutting"],
+                    "2":["MB","GM","Local"],
                     "3":["BU-MB","BU-GM","BU-VW"]
                 },
                 intervalArray=[100,100,100,100],
