--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -76,17 +76,17 @@
       var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L","E1","PPM_L","RFT_L","OEE_L"],
               i,
               departmentArray={
-                  "0":["MB","GM","Local","Cutting"],
-                  "1":["MB","GM","Local","Cutting"],
-                  "2":["MB","GM","Local"],
+                  "0":["MB","GM","VW","Cutting"],
+                  "1":["MB","GM","VW","Cutting"],
+                  "2":["MB","GM","VW"],
                   "3":["BU-MB","BU-GM","BU-VW"],
-                  "4":["MB","GM","Local","Cutting"],
-                  "5":["MB","GM","Local","Cutting"],
-                  "6":["MB","GM","Local"],
+                  "4":["MB","GM","VW","Cutting"],
+                  "5":["MB","GM","VW","Cutting"],
+                  "6":["MB","GM","VW"],
                   "7":["BU-MB","BU-GM","BU-VW"],
-                  "8":["MB","GM","Local","Cutting"],
-                  "9":["MB","GM","Local","Cutting"],
-                  "10":["MB","GM","Local"],
+                  "8":["MB","GM","VW","Cutting"],
+                  "9":["MB","GM","VW","Cutting"],
+                  "10":["MB","GM","VW"],
                   "11":["BU-MB","BU-GM","BU-VW"]
               },
               intervalArray=[100,100,100,100,200,200,200,200,300,300,300,300],
